fix: error spam too much when user not logged in

--- a/src/pages/Client/Landing/components/Courses/components/Course/course.module.css
+++ b/src/pages/Client/Landing/components/Courses/components/Course/course.module.css
@@ -99,4 +99,7 @@
   .card {
     margin: 0.875rem;
   }
+  .notfound {
+    white-space: nowrap;
+  }
 }
